# tomschafer.com

./: .env.template  .gitignore  Makefile  README.md  build.sh  deploy.sh  flake.nix  package-lock.json  package.json  personal-website.cabal  shell.nix  stack.yaml
.github/workflows/: deploy.yml
blog_posts/: 1.md  2.md  bad-languages.md  cars.md  haskell.md  scooter.md  scooter_0.4_0.md  sleeping-beauty.md
public/: index.html
public/images/: delamare.ashx
src/: App.tsx  BuildSite.hs  Image.hs  buildSite.hs  index.ts  mainMenu.tsx  runApp.tsx  utils.tsx
src/data/: experience.ts  projects.ts  technologies.ts
src/pages/: 404.html  index.html
src/scss/: App.scss  common.scss  index.scss  utils.scss  variables.scss
src/scss/components/: main-menu-modal.scss  navbar.scss
src/sections/: aboutMe.tsx  experience.tsx  header.tsx  links.tsx  projects.tsx  technologies.tsx
src/styles/: code-theme.scss  shared-vars.scss  styles.scss
src/templates/: index.html  page.html  post-preview.html  post.html
src/types/: types.ts
static/: code-theme.css  manifest.json  styles.css  theme-toggle.js
