cabal-version:       2.2

name:                personal-website
version:             0.1.0.0
homepage:            https://github.com/thomasschafer/personal-website#readme
build-type:          Simple

executable personal-website
  hs-source-dirs:      src
  main-is:             BuildSite.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5,
                       directory >= 1.3.7.1,
                       filepath >= 1.4.2.2
  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-record-updates
                       -Wincomplete-uni-patterns
                       -Wmissing-export-lists
                       -Wmissing-home-modules
                       -Wpartial-fields
                       -Wredundant-constraints
