cabal-version:       2.2

name:                personal-website
version:             0.1.0.0
homepage:            https://github.com/thomasschafer/personal-website#readme
build-type:          Simple

executable personal-website
  hs-source-dirs:      src
  main-is:             BuildSite.hs
  default-language:    Haskell2010
  build-depends:       aeson >= 2.1.2.1 && < 3,
                       base >= 4.7 && < 5,
                       blaze-html >= 0.9.1.2 && < 1,
                       bytestring >= 0.11.5.2 && < 1,
                       containers >= 0.6.7 && < 1,
                       directory >= 1.3.7.1 && < 2,
                       filepath >= 1.4.2.2 && < 2,
                       pandoc >= 3.0.1 && < 4,
                       pandoc-types >= 1.23.1 && < 2,
                       text >= 2.0.2 && < 3,
                       yaml >= 0.11.11.2 && < 1
  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-record-updates
                       -Wincomplete-uni-patterns
                       -Wmissing-export-lists
                       -Wmissing-home-modules
                       -Wpartial-fields
                       -Wredundant-constraints
  default-extensions:  ImportQualifiedPost,
                       NamedFieldPuns,
                       OverloadedStrings
